# io-streams-haproxy

./: .gitignore  .travis.yml  CONTRIBUTORS  README.md  Setup.hs  changelog.md  configure  configure.ac  io-streams-haproxy.cabal  runTestsAndCoverage.sh
.github/workflows/: ci.yml  haskell-ci.yml
cbits/: byteorder.c
include/: info.txt
src/System/IO/Streams/Network/: HAProxy.hs
src/System/IO/Streams/Network/Internal/: Address.hs
test/: TestSuite.hs
test/System/IO/Streams/Network/HAProxy/: Tests.hs
