AC_INIT([HAProxy protocol 1.5 support for io-streams], [1.0.0.0], [greg@gregorycollins.net], [io-streams-haproxy])

AC_CONFIG_HEADERS([include/HsIoStreamsHaProxyConfig.h])

dnl ** check for specific header (.h) files that we are interested in
AC_CHECK_HEADERS([winsock2.h])
AC_CHECK_HEADERS([arpa/inet.h])

AC_OUTPUT
